force-app/main/default/objects/HRCFSL_Organization_Settings__mdt/HRCFSL_Organization_Settings__mdt.object-meta.xml
<CustomObject>
    <description>for storing the values that needs to be referenced in process builder , validation rules or other configuration items so as to avoid hardcoding within configuration</description>
    <label>Organization Setting</label>
    <pluralLabel>Organization Settings</pluralLabel>
</CustomObject>