force-app/main/default/objects/HRCFSL_Organization_Settings__mdt/fields/HRCFSL_Component_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Component_Description__c</fullName>
    <description>desciption of the component usage and other details.</description>
    <label>Component Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>