force-app/main/default/objects/HRCFSL_Organization_Settings__mdt/fields/HRCFSL_Component_Detail__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Component_Detail__c</fullName>
    <description>For storing the component detail that need to be referenced in configuration item with in salesforce.</description>
    <label>Component Detail</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>