force-app/main/default/objects/HRCFSL_Organization_Settings__mdt/fields/HRCFSL_Component_Detail_Long__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Component_Detail_Long__c</fullName>
    <label>Component Detail Long</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>