force-app/main/default/objects/HRCFSL_Organization_Settings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>HRCFSL_Component_Detail__c</columns>
    <columns>HRCFSL_Component_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>